--- a/library.html
+++ b/library.html
@@ -271,7 +271,8 @@
     const giochi = [
         // Aggiungi qui altri giochi se necessario, verranno ordinati
         { name: "WHEEL", link: "wheel.html", icon: "wheel.png" },
-        { name: "SAPIENTIX", link: "sapientix.html", icon: "sapientix.png" }
+        { name: "SAPIENTIX", link: "sapientix.html", icon: "sapientix.png" },
+        { name: "IMPICCATO", link: "impiccato.html", icon: "impiccato.png" }
     ];
 
     // --- ELEMENTI DOM ---
