--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
       <div class="latest-releases">
           <div class="section-header">
-              <h2>Ultime Uscite</h2>
+              <h2>Giochi</h2>
               <a href="library.html" id="view-library-btn" class="button-link">
                   <i class="fas fa-layer-group"></i> Libreria Completa
               </a>
@@ -256,6 +256,10 @@
           <div class="game-card" data-game="SAPIENTIX">
             <img src="sapientix.png" alt="SAPIENTIX">
             <h3>SAPIENTIX</h3>
+          </div>
+          <div class="game-card" data-game="IMPICCATO">
+            <img src="impiccato.png" alt="IMPICCATO">
+            <h3>IMPICCATO</h3>
           </div>
           </div>
       </div>
@@ -292,7 +296,8 @@
     // --- DATI GIOCHI ---
     const giochi = [
         { name: "SAPIENTIX", link: "sapientix.html", icon: "sapientix.png" },
-        { name: "WHEEL", link: "wheel.html", icon: "wheel.png" }
+        { name: "WHEEL", link: "wheel.html", icon: "wheel.png" },
+        { name: "IMPICCATO", link: "impiccato.html", icon: "impiccato.png" }
     ];
 
     // --- ELEMENTI DOM ---
