--- a/index.html
+++ b/index.html
@@ -249,17 +249,21 @@
               </a>
           </div>
         <div class="games-grid">
-          <div class="game-card" data-game="WHEEL">
-            <img src="wheel.png" alt="WHEEL">
-            <h3>WHEEL</h3>
+          <div class="game-card" data-game="Ruota">
+            <img src="https://cdn.dribbble.com/userupload/21569216/file/original-42acaf4bceb408f257ad864160eaf6be.jpg?resize=800x600&vertical=center" alt="Ruota">
+            <h3>Ruota</h3>
           </div>
           <div class="game-card" data-game="SAPIENTIX">
-            <img src="sapientix.png" alt="SAPIENTIX">
-            <h3>SAPIENTIX</h3>
+            <img src="https://cdn.dribbble.com/userupload/31913655/file/original-6605eb24f4bcccf438dc7d0fe4d005fd.png?resize=752x&vertical=center" alt="SAPIENTIX">
+            <h3>Sapientix</h3>
           </div>
           <div class="game-card" data-game="IMPICCATO">
-            <img src="impiccato.png" alt="IMPICCATO">
-            <h3>IMPICCATO</h3>
+            <img src="https://cdn.dribbble.com/userupload/25433197/file/original-94a88cddb147f47ab494958d5c439ea2.png?resize=1400x1142&vertical=center" alt="IMPICCATO">
+            <h3>Impiccato</h3>
+          </div>
+          <div class="game-card" data-game="Indovina la Bandiera">
+            <img src="https://cdn.dribbble.com/userupload/11098940/file/original-164da43b0da0dce6ef5b3fa42dc1f890.jpg?resize=1600x1200&vertical=center" alt="Indovina la Bandiera">
+            <h3>Indovina la Bandiera</h3>
           </div>
           </div>
       </div>
@@ -295,9 +299,11 @@
   <script>
     // --- DATI GIOCHI ---
     const giochi = [
-        { name: "SAPIENTIX", link: "sapientix.html", icon: "sapientix.png" },
-        { name: "WHEEL", link: "wheel.html", icon: "wheel.png" },
-        { name: "IMPICCATO", link: "impiccato.html", icon: "impiccato.png" }
+        // Aggiungi qui altri giochi se necessario, verranno ordinati
+        { name: "Ruota", link: "wheel.html", icon: "https://cdn.dribbble.com/userupload/21569216/file/original-42acaf4bceb408f257ad864160eaf6be.jpg?resize=800x600&vertical=center" },
+        { name: "Sapientix", link: "sapientix.html", icon: "https://cdn.dribbble.com/userupload/31913655/file/original-6605eb24f4bcccf438dc7d0fe4d005fd.png?resize=752x&vertical=center" },
+        { name: "Impiccato", link: "impiccato.html", icon: "https://cdn.dribbble.com/userupload/25433197/file/original-94a88cddb147f47ab494958d5c439ea2.png?resize=1400x1142&vertical=center"},
+         {name: "Indovina la Bandiera", link: "bandiere.html", icon: "https://cdn.dribbble.com/userupload/11098940/file/original-164da43b0da0dce6ef5b3fa42dc1f890.jpg?resize=1600x1200&vertical=center"}
     ];
 
     // --- ELEMENTI DOM ---
