--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <div class="wrapper">
     <div class="container">
       <div class="logo">
-        <img src="logo.jpg" alt="The Guild Hall Logo">
+        <img src="https://cdn.dribbble.com/userupload/43195501/file/original-de62cf563ded861bf418360f5710c325.jpg?resize=3300x2200&vertical=center" alt="The Guild Hall Logo">
       </div>
       <h1>The Guild Hall</h1>
       <p class="tagline">Esplora mondi virtuali straordinari e divertiti con i miei giochi</p>
