--- a/index.html
+++ b/index.html
@@ -253,16 +253,16 @@
             <img src="https://cdn.dribbble.com/userupload/21569216/file/original-42acaf4bceb408f257ad864160eaf6be.jpg?resize=800x600&vertical=center" alt="Ruota">
             <h3>Ruota</h3>
           </div>
-          <div class="game-card" data-game="SAPIENTIX">
+          <div class="game-card" data-game="Sapientix">
             <img src="https://cdn.dribbble.com/userupload/31913655/file/original-6605eb24f4bcccf438dc7d0fe4d005fd.png?resize=752x&vertical=center" alt="SAPIENTIX">
             <h3>Sapientix</h3>
           </div>
-          <div class="game-card" data-game="IMPICCATO">
+          <div class="game-card" data-game="Impiccato">
             <img src="https://cdn.dribbble.com/userupload/25433197/file/original-94a88cddb147f47ab494958d5c439ea2.png?resize=1400x1142&vertical=center" alt="IMPICCATO">
             <h3>Impiccato</h3>
           </div>
           <div class="game-card" data-game="Indovina la Bandiera">
-            <img src="https://cdn.dribbble.com/userupload/11098940/file/original-164da43b0da0dce6ef5b3fa42dc1f890.jpg?resize=1600x1200&vertical=center" alt="Indovina la Bandiera">
+            <img src="https://i.pinimg.com/736x/91/42/9b/91429b9447a4b94d0b6f6c227263492c.jpg" alt="Indovina la Bandiera">
             <h3>Indovina la Bandiera</h3>
           </div>
           </div>
@@ -277,7 +277,7 @@
   </div>
 
   <div class="donation-notch" id="donation-notch">
-      <div class="donation-handle" id="donation-handle">Supportami</div>
+      <div class="donation-handle" id="donation-handle">Supportami</div>https://cdn.dribbble.com/userupload/11098940/file/original-164da43b0da0dce6ef5b3fa42dc1f890.jpg?resize=1600x1200&vertical=cente
       <div class="donation-content">
         <div class="donation-text">
           <h3>Aiutami a migliorare The Guild Hall!</h3>
@@ -303,7 +303,7 @@
         { name: "Ruota", link: "wheel.html", icon: "https://cdn.dribbble.com/userupload/21569216/file/original-42acaf4bceb408f257ad864160eaf6be.jpg?resize=800x600&vertical=center" },
         { name: "Sapientix", link: "sapientix.html", icon: "https://cdn.dribbble.com/userupload/31913655/file/original-6605eb24f4bcccf438dc7d0fe4d005fd.png?resize=752x&vertical=center" },
         { name: "Impiccato", link: "impiccato.html", icon: "https://cdn.dribbble.com/userupload/25433197/file/original-94a88cddb147f47ab494958d5c439ea2.png?resize=1400x1142&vertical=center"},
-         {name: "Indovina la Bandiera", link: "bandiere.html", icon: "https://cdn.dribbble.com/userupload/11098940/file/original-164da43b0da0dce6ef5b3fa42dc1f890.jpg?resize=1600x1200&vertical=center"}
+         {name: "Indovina la Bandiera", link: "bandiere.html", icon: "https://i.pinimg.com/736x/91/42/9b/91429b9447a4b94d0b6f6c227263492c.jpg"}
     ];
 
     // --- ELEMENTI DOM ---
