--- a/library.html
+++ b/library.html
@@ -273,8 +273,9 @@
         { name: "Ruota", link: "wheel.html", icon: "https://cdn.dribbble.com/userupload/21569216/file/original-42acaf4bceb408f257ad864160eaf6be.jpg?resize=800x600&vertical=center" },
         { name: "Sapientix", link: "sapientix.html", icon: "https://cdn.dribbble.com/userupload/31913655/file/original-6605eb24f4bcccf438dc7d0fe4d005fd.png?resize=752x&vertical=center" },
         { name: "Impiccato", link: "impiccato.html", icon: "https://cdn.dribbble.com/userupload/25433197/file/original-94a88cddb147f47ab494958d5c439ea2.png?resize=1400x1142&vertical=center"},
-         {name: "Indovina la Bandiera", link: "bandiere.html", icon: "https://cdn.dribbble.com/userupload/11098940/file/original-164da43b0da0dce6ef5b3fa42dc1f890.jpg?resize=1600x1200&vertical=center"}
+         {name: "Indovina la Bandiera", link: "bandiere.html", icon: "https://i.pinimg.com/736x/91/42/9b/91429b9447a4b94d0b6f6c227263492c.jpg"}
     ];
+
 
     // --- ELEMENTI DOM ---
     const libraryGrid = document.getElementById('libraryGrid');
